fix origin in staticfiles service when on the server, improve legibility of muted text

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 // Colors
 $color-text: #424242;
-$color-muted: #9bb2b3;
+$color-muted: #738f8f;
 $color-muted-dark: darken($color-muted, 20%);
 $color-inline-code: #df5f71;
 $color-gray-lightest: #F9F9F9;
